// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 1`] = `
"/*
 * Swagger Petstore
 *
 * A sample API that uses a petstore as an example to demonstrate features in the OpenAPI 3.0 specification
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using Newtonsoft.Json;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Net.Http;
using System.Threading.Tasks;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public interface IDefaultApiClient
    { 
        /// <summary>
        /// 
        /// </summary>
        /// <remarks>Creates a new pet in the store. Duplicates are allowed</remarks>
        /// <param name=\\"newPet\\">Pet to add to the store</param>
        Task<DefaultApiClient.ITypeSafeAddPetResult> AddPetAsync(
            NewPet newPet,
            System.Net.Http.Headers.AuthenticationHeaderValue? _authorizationHeader = null);

        /// <summary>
        /// 
        /// </summary>
        /// <remarks>deletes a single pet based on the ID supplied</remarks>
        /// <param name=\\"id\\">ID of pet to delete</param>
        Task<DefaultApiClient.ITypeSafeDeletePetResult> DeletePetAsync(
            long? id,
            System.Net.Http.Headers.AuthenticationHeaderValue? _authorizationHeader = null);

        /// <summary>
        /// 
        /// </summary>
        /// <remarks>Returns a user based on a single ID, if the user does not have access to the pet</remarks>
        /// <param name=\\"id\\">ID of pet to fetch</param>
        Task<DefaultApiClient.ITypeSafeFindPetByIdResult> FindPetByIdAsync(
            long? id,
            System.Net.Http.Headers.AuthenticationHeaderValue? _authorizationHeader = null);

        /// <summary>
        /// 
        /// </summary>
        /// <remarks>Returns all pets from the system that the user has access to Nam sed condimentum est. Maecenas tempor sagittis sapien, nec rhoncus sem sagittis sit amet. Aenean at gravida augue, ac iaculis sem. Curabitur odio lorem, ornare eget elementum nec, cursus id lectus. Duis mi turpis, pulvinar ac eros ac, tincidunt varius justo. In hac habitasse platea dictumst. Integer at adipiscing ante, a sagittis ligula. Aenean pharetra tempor ante molestie imperdiet. Vivamus id aliquam diam. Cras quis velit non tortor eleifend sagittis. Praesent at enim pharetra urna volutpat venenatis eget eget mauris. In eleifend fermentum facilisis. Praesent enim enim, gravida ac sodales sed, placerat id erat. Suspendisse lacus dolor, consectetur non augue vel, vehicula interdum libero. Morbi euismod sagittis libero sed lacinia.  Sed tempus felis lobortis leo pulvinar rutrum. Nam mattis velit nisl, eu condimentum ligula luctus nec. Phasellus semper velit eget aliquet faucibus. In a mattis elit. Phasellus vel urna viverra, condimentum lorem id, rhoncus nibh. Ut pellentesque posuere elementum. Sed a varius odio. Morbi rhoncus ligula libero, vel eleifend nunc tristique vitae. Fusce et sem dui. Aenean nec scelerisque tortor. Fusce malesuada accumsan magna vel tempus. Quisque mollis felis eu dolor tristique, sit amet auctor felis gravida. Sed libero lorem, molestie sed nisl in, accumsan tempor nisi. Fusce sollicitudin massa ut lacinia mattis. Sed vel eleifend lorem. Pellentesque vitae felis pretium, pulvinar elit eu, euismod sapien. </remarks>
        /// <param name=\\"tags\\">tags to filter by</param>
        /// <param name=\\"limit\\">maximum number of results to return</param>
        Task<DefaultApiClient.ITypeSafeFindPetsResult> FindPetsAsync(
            IReadOnlyList<string> tags,
            int? limit,
            System.Net.Http.Headers.AuthenticationHeaderValue? _authorizationHeader = null);
    }

    public class DefaultApiClientConfiguration
    {
        public string BaseUrl { get; set; }
        public JsonSerializerSettings Settings { get; set; }
    }

    /// <summary>
    /// 
    /// </summary>
    public sealed class DefaultApiClient : IDefaultApiClient
    {
        private readonly HttpClient httpClient;
        private readonly DefaultApiClientConfiguration configuration;

        public DefaultApiClient(HttpClient httpClient, DefaultApiClientConfiguration configuration)
        {
            this.httpClient = httpClient;
            this.configuration = configuration;
        }

        /// <summary>
        /// 
        /// </summary>
        /// <remarks>Creates a new pet in the store. Duplicates are allowed</remarks>
        /// <param name=\\"_newPet\\">Pet to add to the store</param>
        public Task<ITypeSafeAddPetResult> AddPetAsync(
            NewPet _newPet,
            System.Net.Http.Headers.AuthenticationHeaderValue? authorization = null)
        {
            var path = \\"/pets\\";
            var uri = new UriBuilder(this.configuration.BaseUrl + path).Uri;
            var request = new HttpRequestMessage(HttpMethod.Post, uri);
            request.Headers.Authorization = authorization;
            request.Content = new StringContent(Newtonsoft.Json.JsonConvert.SerializeObject(_newPet, this.configuration.Settings), System.Text.Encoding.UTF8, \\"application/json\\");
            return this.httpClient.SendAsync(request)
                             .ContinueWith(t => (ITypeSafeAddPetResult)new TypeSafeAddPetResult(t.Result, this.configuration.Settings));
        }

        /// <summary>
        /// 
        /// </summary>
        /// <remarks>deletes a single pet based on the ID supplied</remarks>
        /// <param name=\\"_id\\">ID of pet to delete</param>
        public Task<ITypeSafeDeletePetResult> DeletePetAsync(
            long? _id,
            System.Net.Http.Headers.AuthenticationHeaderValue? authorization = null)
        {
            var path = \\"/pets/{id}\\"
                        .Replace(\\"{id}\\", System.Web.HttpUtility.UrlEncode(_id.ToString()));
            var uri = new UriBuilder(this.configuration.BaseUrl + path).Uri;
            var request = new HttpRequestMessage(HttpMethod.Delete, uri);
            request.Headers.Authorization = authorization;
            return this.httpClient.SendAsync(request)
                             .ContinueWith(t => (ITypeSafeDeletePetResult)new TypeSafeDeletePetResult(t.Result, this.configuration.Settings));
        }

        /// <summary>
        /// 
        /// </summary>
        /// <remarks>Returns a user based on a single ID, if the user does not have access to the pet</remarks>
        /// <param name=\\"_id\\">ID of pet to fetch</param>
        public Task<ITypeSafeFindPetByIdResult> FindPetByIdAsync(
            long? _id,
            System.Net.Http.Headers.AuthenticationHeaderValue? authorization = null)
        {
            var path = \\"/pets/{id}\\"
                        .Replace(\\"{id}\\", System.Web.HttpUtility.UrlEncode(_id.ToString()));
            var uri = new UriBuilder(this.configuration.BaseUrl + path).Uri;
            var request = new HttpRequestMessage(HttpMethod.Get, uri);
            request.Headers.Authorization = authorization;
            return this.httpClient.SendAsync(request)
                             .ContinueWith(t => (ITypeSafeFindPetByIdResult)new TypeSafeFindPetByIdResult(t.Result, this.configuration.Settings));
        }

        /// <summary>
        /// 
        /// </summary>
        /// <remarks>Returns all pets from the system that the user has access to Nam sed condimentum est. Maecenas tempor sagittis sapien, nec rhoncus sem sagittis sit amet. Aenean at gravida augue, ac iaculis sem. Curabitur odio lorem, ornare eget elementum nec, cursus id lectus. Duis mi turpis, pulvinar ac eros ac, tincidunt varius justo. In hac habitasse platea dictumst. Integer at adipiscing ante, a sagittis ligula. Aenean pharetra tempor ante molestie imperdiet. Vivamus id aliquam diam. Cras quis velit non tortor eleifend sagittis. Praesent at enim pharetra urna volutpat venenatis eget eget mauris. In eleifend fermentum facilisis. Praesent enim enim, gravida ac sodales sed, placerat id erat. Suspendisse lacus dolor, consectetur non augue vel, vehicula interdum libero. Morbi euismod sagittis libero sed lacinia.  Sed tempus felis lobortis leo pulvinar rutrum. Nam mattis velit nisl, eu condimentum ligula luctus nec. Phasellus semper velit eget aliquet faucibus. In a mattis elit. Phasellus vel urna viverra, condimentum lorem id, rhoncus nibh. Ut pellentesque posuere elementum. Sed a varius odio. Morbi rhoncus ligula libero, vel eleifend nunc tristique vitae. Fusce et sem dui. Aenean nec scelerisque tortor. Fusce malesuada accumsan magna vel tempus. Quisque mollis felis eu dolor tristique, sit amet auctor felis gravida. Sed libero lorem, molestie sed nisl in, accumsan tempor nisi. Fusce sollicitudin massa ut lacinia mattis. Sed vel eleifend lorem. Pellentesque vitae felis pretium, pulvinar elit eu, euismod sapien. </remarks>
        /// <param name=\\"_tags\\">tags to filter by</param>
        /// <param name=\\"_limit\\">maximum number of results to return</param>
        public Task<ITypeSafeFindPetsResult> FindPetsAsync(
            IReadOnlyList<string> _tags,
            int? _limit,
            System.Net.Http.Headers.AuthenticationHeaderValue? authorization = null)
        {
            var path = \\"/pets\\";
            var query = new System.Collections.Specialized.NameValueCollection
            {
                { \\"tags\\", _tags.Select(v => v.ToString()) },
                { \\"limit\\", _limit.ToString() },
            };
            var uri = new UriBuilder(this.configuration.BaseUrl + path)
                    {
                        Query = string.Join(\\"&\\", from key in query.AllKeys
                                                 let values = query.GetValues(key)
                                                 where values != null && values.Length > 0
                                                 let keySuffix = values.Length > 1 ? \\"[]\\" : \\"\\"
                                                 from value in values
                                                 select System.Web.HttpUtility.UrlEncode(key) + keySuffix + \\"=\\" + System.Web.HttpUtility.UrlEncode(value)),
                    }
                    .Uri;
            var request = new HttpRequestMessage(HttpMethod.Get, uri);
            request.Headers.Authorization = authorization;
            return this.httpClient.SendAsync(request)
                             .ContinueWith(t => (ITypeSafeFindPetsResult)new TypeSafeFindPetsResult(t.Result, this.configuration.Settings));
        }


        public interface ITypeSafeAddPetResult : IDisposable
        {
            HttpResponseMessage Response { get; }
            System.Net.HttpStatusCode StatusCode => Response.StatusCode;


            /// <summary>pet response</summary>
            Task<Pet> StatusCode200Async();

            /// <summary>unexpected error</summary>
            Task<Error> OtherStatusCodeAsync();
        }

        public readonly struct TypeSafeAddPetResult : ITypeSafeAddPetResult
        {
            private readonly JsonSerializerSettings settings;

            public TypeSafeAddPetResult(HttpResponseMessage response, JsonSerializerSettings settings)
            {
                this.Response = response;
                this.settings = settings;
            }

            public HttpResponseMessage Response { get; }


            /// <summary>pet response</summary>
            public Task<Pet> StatusCode200Async()
            {
                if (this.Response.StatusCode != (System.Net.HttpStatusCode)200)
                    throw new InvalidOperationException();
                var settings = this.settings;
                return this.Response.Content.ReadAsStringAsync()
                    .ContinueWith(t => Newtonsoft.Json.JsonConvert.DeserializeObject<Pet>(t.Result, settings));
            }

            /// <summary>unexpected error</summary>
            public Task<Error> OtherStatusCodeAsync()
            {
                var settings = this.settings;
                return this.Response.Content.ReadAsStringAsync()
                    .ContinueWith(t => Newtonsoft.Json.JsonConvert.DeserializeObject<Error>(t.Result, settings));
            }

            void IDisposable.Dispose()
            {
                ((IDisposable)Response).Dispose();
            }
        }


        public interface ITypeSafeDeletePetResult : IDisposable
        {
            HttpResponseMessage Response { get; }
            System.Net.HttpStatusCode StatusCode => Response.StatusCode;


            /// <summary>pet deleted</summary>
            Task<HttpResponseMessage> StatusCode204Async();

            /// <summary>unexpected error</summary>
            Task<Error> OtherStatusCodeAsync();
        }

        public readonly struct TypeSafeDeletePetResult : ITypeSafeDeletePetResult
        {
            private readonly JsonSerializerSettings settings;

            public TypeSafeDeletePetResult(HttpResponseMessage response, JsonSerializerSettings settings)
            {
                this.Response = response;
                this.settings = settings;
            }

            public HttpResponseMessage Response { get; }


            /// <summary>pet deleted</summary>
            public Task<HttpResponseMessage> StatusCode204Async()
            {
                if (this.Response.StatusCode != (System.Net.HttpStatusCode)204)
                    throw new InvalidOperationException();

                return Task.FromResult(Response);
            }

            /// <summary>unexpected error</summary>
            public Task<Error> OtherStatusCodeAsync()
            {
                var settings = this.settings;
                return this.Response.Content.ReadAsStringAsync()
                    .ContinueWith(t => Newtonsoft.Json.JsonConvert.DeserializeObject<Error>(t.Result, settings));
            }

            void IDisposable.Dispose()
            {
                ((IDisposable)Response).Dispose();
            }
        }


        public interface ITypeSafeFindPetByIdResult : IDisposable
        {
            HttpResponseMessage Response { get; }
            System.Net.HttpStatusCode StatusCode => Response.StatusCode;


            /// <summary>pet response</summary>
            Task<Pet> StatusCode200Async();

            /// <summary>unexpected error</summary>
            Task<Error> OtherStatusCodeAsync();
        }

        public readonly struct TypeSafeFindPetByIdResult : ITypeSafeFindPetByIdResult
        {
            private readonly JsonSerializerSettings settings;

            public TypeSafeFindPetByIdResult(HttpResponseMessage response, JsonSerializerSettings settings)
            {
                this.Response = response;
                this.settings = settings;
            }

            public HttpResponseMessage Response { get; }


            /// <summary>pet response</summary>
            public Task<Pet> StatusCode200Async()
            {
                if (this.Response.StatusCode != (System.Net.HttpStatusCode)200)
                    throw new InvalidOperationException();
                var settings = this.settings;
                return this.Response.Content.ReadAsStringAsync()
                    .ContinueWith(t => Newtonsoft.Json.JsonConvert.DeserializeObject<Pet>(t.Result, settings));
            }

            /// <summary>unexpected error</summary>
            public Task<Error> OtherStatusCodeAsync()
            {
                var settings = this.settings;
                return this.Response.Content.ReadAsStringAsync()
                    .ContinueWith(t => Newtonsoft.Json.JsonConvert.DeserializeObject<Error>(t.Result, settings));
            }

            void IDisposable.Dispose()
            {
                ((IDisposable)Response).Dispose();
            }
        }


        public interface ITypeSafeFindPetsResult : IDisposable
        {
            HttpResponseMessage Response { get; }
            System.Net.HttpStatusCode StatusCode => Response.StatusCode;


            /// <summary>pet response</summary>
            Task<IReadOnlyList<Pet>> StatusCode200Async();

            /// <summary>unexpected error</summary>
            Task<Error> OtherStatusCodeAsync();
        }

        public readonly struct TypeSafeFindPetsResult : ITypeSafeFindPetsResult
        {
            private readonly JsonSerializerSettings settings;

            public TypeSafeFindPetsResult(HttpResponseMessage response, JsonSerializerSettings settings)
            {
                this.Response = response;
                this.settings = settings;
            }

            public HttpResponseMessage Response { get; }


            /// <summary>pet response</summary>
            public Task<IReadOnlyList<Pet>> StatusCode200Async()
            {
                if (this.Response.StatusCode != (System.Net.HttpStatusCode)200)
                    throw new InvalidOperationException();
                var settings = this.settings;
                return this.Response.Content.ReadAsStringAsync()
                    .ContinueWith(t => Newtonsoft.Json.JsonConvert.DeserializeObject<IReadOnlyList<Pet>>(t.Result, settings));
            }

            /// <summary>unexpected error</summary>
            public Task<Error> OtherStatusCodeAsync()
            {
                var settings = this.settings;
                return this.Response.Content.ReadAsStringAsync()
                    .ContinueWith(t => Newtonsoft.Json.JsonConvert.DeserializeObject<Error>(t.Result, settings));
            }

            void IDisposable.Dispose()
            {
                ((IDisposable)Response).Dispose();
            }
        }

    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 2`] = `
"/*
 * Swagger Petstore
 *
 * A sample API that uses a petstore as an example to demonstrate features in the OpenAPI 3.0 specification
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class Error : IEquatable<Error>
    {
        public Error(
                [JsonProperty(PropertyName=\\"code\\"), Required] int? Code, 
                [JsonProperty(PropertyName=\\"message\\"), Required] string Message
            )
        { 
            this.Code = Code;
            this.Message = Message;
        }

        
        /// <summary>
        /// Gets Code
        /// </summary>
        [Required]
        [JsonProperty(PropertyName=\\"code\\")]
        public int? Code { get; }

        /// <summary>
        /// Gets Message
        /// </summary>
        [Required]
        [JsonProperty(PropertyName=\\"message\\")]
        public string Message { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((Error)obj);
        }

        public bool Equals(Error other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Code == other.Code ||
                    Code != null &&
                    Code.Equals(other.Code)
                ) && 
                (
                    Message == other.Message ||
                    Message != null &&
                    Message.Equals(other.Message)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Code != null)
                    hashCode = hashCode * 59 + Code.GetHashCode();
                if (Message != null)
                    hashCode = hashCode * 59 + Message.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 3`] = `
"
/*
 * Swagger Petstore
 *
 * A sample API that uses a petstore as an example to demonstrate features in the OpenAPI 3.0 specification
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Collections.Generic;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{
    public static class NameValueCollectionExtensions
    {
        public static void Add(this System.Collections.Specialized.NameValueCollection original, string key, IEnumerable<string> values)
        {
            foreach (var value in values)
            {
                original.Add(key, value);
            }
        }
    }
}
"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 4`] = `
"/*
 * Swagger Petstore
 *
 * A sample API that uses a petstore as an example to demonstrate features in the OpenAPI 3.0 specification
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class NewPet : IEquatable<NewPet>
    {
        public NewPet(
                [JsonProperty(PropertyName=\\"name\\"), Required] string Name, 
                [JsonProperty(PropertyName=\\"tag\\")] string Tag
            )
        { 
            this.Name = Name;
            this.Tag = Tag;
        }

        
        /// <summary>
        /// Gets Name
        /// </summary>
        [Required]
        [JsonProperty(PropertyName=\\"name\\")]
        public string Name { get; }

        /// <summary>
        /// Gets Tag
        /// </summary>
        [JsonProperty(PropertyName=\\"tag\\")]
        public string Tag { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((NewPet)obj);
        }

        public bool Equals(NewPet other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Name == other.Name ||
                    Name != null &&
                    Name.Equals(other.Name)
                ) && 
                (
                    Tag == other.Tag ||
                    Tag != null &&
                    Tag.Equals(other.Tag)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Name != null)
                    hashCode = hashCode * 59 + Name.GetHashCode();
                if (Tag != null)
                    hashCode = hashCode * 59 + Tag.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 5`] = `
"/*
 * Swagger Petstore
 *
 * A sample API that uses a petstore as an example to demonstrate features in the OpenAPI 3.0 specification
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class Pet : IEquatable<Pet>
    {
        public Pet(
                [JsonProperty(PropertyName=\\"name\\"), Required] string Name, 
                [JsonProperty(PropertyName=\\"tag\\")] string Tag, 
                [JsonProperty(PropertyName=\\"id\\"), Required] long? Id
            )
        { 
            this.Name = Name;
            this.Tag = Tag;
            this.Id = Id;
        }

        
        /// <summary>
        /// Gets Name
        /// </summary>
        [Required]
        [JsonProperty(PropertyName=\\"name\\")]
        public string Name { get; }

        /// <summary>
        /// Gets Tag
        /// </summary>
        [JsonProperty(PropertyName=\\"tag\\")]
        public string Tag { get; }

        /// <summary>
        /// Gets Id
        /// </summary>
        [Required]
        [JsonProperty(PropertyName=\\"id\\")]
        public long? Id { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((Pet)obj);
        }

        public bool Equals(Pet other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Name == other.Name ||
                    Name != null &&
                    Name.Equals(other.Name)
                ) && 
                (
                    Tag == other.Tag ||
                    Tag != null &&
                    Tag.Equals(other.Tag)
                ) && 
                (
                    Id == other.Id ||
                    Id != null &&
                    Id.Equals(other.Id)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Name != null)
                    hashCode = hashCode * 59 + Name.GetHashCode();
                if (Tag != null)
                    hashCode = hashCode * 59 + Tag.GetHashCode();
                if (Id != null)
                    hashCode = hashCode * 59 + Id.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 6`] = `
"/*
 * Swagger Petstore
 *
 * A sample API that uses a petstore as an example to demonstrate features in the OpenAPI 3.0 specification
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class PetAllOf : IEquatable<PetAllOf>
    {
        public PetAllOf(
                [JsonProperty(PropertyName=\\"id\\"), Required] long? Id
            )
        { 
            this.Id = Id;
        }

        
        /// <summary>
        /// Gets Id
        /// </summary>
        [Required]
        [JsonProperty(PropertyName=\\"id\\")]
        public long? Id { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((PetAllOf)obj);
        }

        public bool Equals(PetAllOf other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Id == other.Id ||
                    Id != null &&
                    Id.Equals(other.Id)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Id != null)
                    hashCode = hashCode * 59 + Id.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;
